Add support to change background color

--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,11 @@
 
     var i, data;
     for (i = 0; i < hashes.length; i++) {
-        data = new Identicon(hashes[i].hash, 420).toString();
+        data = new Identicon(hashes[i].hash, {
+          size: 420,
+          backgroundColor: [0, 0, 0, 0]
+        }).toString();
+
         document.write(
                 hashes[i].id + '<br><img width=420 height=420 src="data:image/png;base64,' + data + '"><br><br>'
         );
